--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,11 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.7",
     "axios": "^1.6.1",
     "next": "14.0.2",
     "react": "^18",
     "react-dom": "^18",
-    "react-redux": "^8.1.3"
+    "react-redux": "^8.1.3",
+    "redux-thunk": "^2.4.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
