--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-spring/web": "^9.7.3",
     "@reduxjs/toolkit": "^1.9.7",
     "axios": "^1.6.1",
     "next": "14.0.2",
@@ -22,7 +23,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.0.2",
     "postcss": "^8",
-    "react-icons": "^4.11.0",
+    "react-icons": "^4.12.0",
     "tailwindcss": "^3.3.0"
   }
 }
